Fixed Syntax overflow

--- a/assets/src/scss/index.scss
+++ b/assets/src/scss/index.scss
@@ -62,6 +62,7 @@ pre {
 	line-height: 1.2;
 	padding: 1.5em;
 	tab-size: 2;
+	overflow-x: auto;
 
 	/* stylelint-disable-next-line selector-max-type */
 	code {
